# libdc_c

./: CMakeLists.txt
include/dc_c/: dc_complex.h  dc_ctype.h  dc_fenv.h  dc_inttypes.h  dc_locale.h  dc_math.h  dc_setjmp.h  dc_signal.h  dc_stdio.h  dc_stdlib.h  dc_string.h  dc_time.h  dc_wchar.h  dc_wctype.h
src/: complex.c  ctype.c  fenv.c  inttypes.c  locale.c  math.c  setjmp.c  signal.c  stdio.c  stdlib.c  string.c  time.c  wchar.c  wctype.c
tests/: CMakeLists.txt  complex_tests.c  ctype_tests.c  inttypes_tests.c  locale_tests.c  main.c  math_tests.c  setjmp_tests.c  signal_tests.c  stdio_tests.c  stdlib_tests.c  string_tests.c  tests.h  time_tests.c  unistd_tests.c  wchar_tests.c  wctype_tests.c
